--- a/style2.css
+++ b/style2.css
@@ -25,6 +25,10 @@ body {
 a{
     text-decoration: none;
     color: black;
+    font-family: 'poppins';
+    font-size: 1em;
+    font-weight: 500;
+    
 }
 
 /*-------Header-----------------------------------*/
@@ -85,7 +89,8 @@ nav{
     flex-direction: row;
     flex-wrap: nowrap;
     font-family: 'poppins';
-    font-size: 2vh;    
+    font-size: 2.2vh;    
+    font-weight: 500;
 }
 
 nav a{
@@ -146,7 +151,7 @@ nav a{
 .container__text--center h3{
     margin-bottom: 10%;
     text-align: center;
-    font-family: 'Nunito', sans-serif;
+    font-family: "Poppins";
     font-size:  1.2rem;
     line-height: 1.8rem;
 }
@@ -154,7 +159,7 @@ nav a{
 .container__text--center button {
     border: 1px solid #272343;
     border-radius: 30px;
-    font-family:'Nunito', sans-serif;
+    font-family:"Poppins";
     background-color: transparent;
 }
 
@@ -207,11 +212,13 @@ nav a{
 
 .about__content--text h2{
     font-family: 'Bauhaus 93';
+    font-size: 2em;
     margin-bottom: 2rem;
+    color: #272343;
 }
 
 .about__content--text p {
-    font-family: 'Nunito', sans-serif;
+    font-family: "Poppins";
     font-weight: bold;
 }
 
@@ -289,11 +296,14 @@ nav a{
 
 .containerSkills h3{
     font-family: 'Bauhaus 93';
+    font-size: 2em;
+    color: #272343;
 }
 .containerSkills p{
-    font-family: 'Nunito', sans-serif;
+    font-family: "Poppins";
     font-size: 2vh;
-    padding: 2rem;
+    font-weight: 400;
+    padding:  0 1rem 1rem 1rem;    
 }
 
 .containerSkills img{
@@ -323,17 +333,19 @@ nav a{
     text-align: center;
     font-size: 2rem;
     font-family: 'Bauhaus 93';
+    margin-top: 3rem;
+    color: #272343;
 }
 
 .work__header p{
-    font-family: 'Nunito', sans-serif;
+    font-family: "Poppins";
   
     font-size: 1.2rem;
 }
 
 .work__header button{
-    font-family: 'Nunito', sans-serif;
-    width: 10rem;
+    font-family: "Poppins";
+    width: 12rem;
     font-size: 1.2rem;
     border: 1px solid #272343;
     background-color: transparent;
@@ -350,7 +362,7 @@ nav a{
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
     overflow-y: scroll;
-   
+    margin-top: 3%;
 }
 
 .project--item{
@@ -358,7 +370,7 @@ nav a{
     display: flex;
     flex-direction: column;
     width: 10vw;
-    font-family: 'Nunito', sans-serif;
+    font-family: "Poppins";
     text-align: center;
     font-weight: 400;
 }
@@ -427,18 +439,27 @@ nav a{
 
 .com__open h2{
     
+    font-family: "Bauhaus 93";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2em;
+    line-height: 1em;
     text-align: center;
-    font-size: 2rem;
-    font-family: 'Bauhaus 93';
+    margin-bottom: 25px;
 }
 
 .com__open p{
-    font-family: 'Nunito', sans-serif;
-    font-size: 1.2rem;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 300;
+    font-size: 1.25em;
+    line-height: 1em;
+    text-align: center;
+    width: 40%;
 }
 
 .com__open button{
-    font-family: 'Nunito', sans-serif;
+    font-family: "Poppins";
     width: 15rem;
     font-size: 1.2rem;
     border: 1px solid white;
@@ -459,7 +480,7 @@ nav a{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 60vh;
+    height: 50vh;
 }
 
 .com__form--contact{
@@ -470,18 +491,20 @@ nav a{
 .com__form--contact h2{
     font-size: 2rem;
     font-family: 'Bauhaus 93';
+    color: #272343;
 }
 
 .com__form--contact p{
-    font-family: 'Nunito', sans-serif;
+    font-family: "Poppins";
     font-size: 1.2rem;
     margin-top: 1rem;
 }
 
 .com__form--contact h3{
     margin-top: 1rem;
-    font-family: 'Nunito', sans-serif;
-    font-size: 1.4rem;
+    font-family: 'Bauhaus 93';
+    font-size: 1.5rem;
+    font-weight: 500;
 }
 
 .com__form--contact--mail{
@@ -530,7 +553,8 @@ form h3 {
     background: #272343;
     border-radius: 15px;
     color: white;
-    width: 20%;
+    width: 25%;
+    padding-right: 5px;
 }
 
 input::placeholder {
@@ -542,8 +566,9 @@ input::placeholder {
       margin-top: 2%;
       width: 70%;
       height: 4vh;  
-      border: 1px solid ;
+      /* border: 1px solid ; */
     border-radius: 3px;
+    padding-left: 5px;
     background-color: #F3FBFB;
   }
 
@@ -567,7 +592,9 @@ footer {
 }
 
 footer h3 {
-    font-family: 'Nunito', sans-serif;
+    font-family: "poppins";
+    font-size: larger;
+    font-weight: 400;
     color: #fff;
     margin-left: 4%;
 }
@@ -668,22 +695,22 @@ footer h3 {
   
   .project--item__modal--text h3{
     margin-top: 1rem;  
-    font-family: 'Nunito';
+    font-family: "Poppins";
     font-weight: 1000;
   }
   .project--item__modal--text p{
-    font-family: 'Nunito';
+    font-family: "Poppins";
     font-weight: 200;
   }
 
 .project--item__modal--textDesc{
     margin-top: 1rem; 
-    font-family: 'Nunito';
+    font-family: "Poppins";
     font-weight: 500;    
 }
 
 .project--item__modal--text button {
-    font-family: 'Nunito', sans-serif;
+    font-family: "Poppins";
     width: 10rem;
     font-size: 1rem;
     border: 1.5px solid #272343;
