--- a/style2.css
+++ b/style2.css
@@ -12,9 +12,9 @@
 
 
 #loading img{
-    margin-left: 42vw;
+    margin-left: 40vw;
     margin-top: 30vh;
-    width: 14%;
+    width: 20%;
     height: 30%;
 }
 
@@ -192,8 +192,14 @@ nav a{
     height: 55%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
+
+.about__content img{
+    width: 30vw;
+    border-radius: 33px;
+}
+
 
 .about__content--text{
     display: flex;
@@ -313,7 +319,7 @@ nav a{
 /*------------------My work---------------------------*/
 
 .work{
-    height: 90vh;  
+    height: max-content;  
     display: flex;
     flex-direction: column;
     margin-top: 10vh;
@@ -321,6 +327,9 @@ nav a{
 }
 
 .work__header{
+    position: sticky;
+    z-index: 1;
+    top: -4vh;
     height: 25vh;
     display: flex;
     flex-direction: column;
@@ -344,7 +353,7 @@ nav a{
 }
 
 .work__header button{
-    font-family: "Poppins";
+    font-family: "Poppins";  
     width: 12rem;
     font-size: 1.2rem;
     border: 1px solid #272343;
@@ -357,11 +366,12 @@ nav a{
 }
 
 .work__projects{
-    margin-left: 5%;
+    margin-left: 10%;
+    width: 80vw;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-    overflow-y: scroll;
+    grid-gap: 10px;   
+   /* overflow-y: scroll;*/
     margin-top: 3%;
 }
 
