--- a/style2.css
+++ b/style2.css
@@ -624,7 +624,9 @@ footer h3 {
 
 /*------------ Modal (background)---------- */
 .modal {
-    display: none; /* Hidden by default */
+    display: flex; /* Hidden by default */
+    justify-content: center;
+    align-items: center;
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
@@ -641,6 +643,7 @@ footer h3 {
   .modal-content {
     background-color: #fefefe;
     margin: 8% auto; /* 15% from the top and centered */
+    margin-bottom: 8%;
     border-radius: 20px;
     border: 1px solid #888;
     width: 60%; /* Could be more or less, depending on screen size */
@@ -715,6 +718,8 @@ footer h3 {
 
 .project--item__modal--textDesc{
     margin-top: 1rem; 
+    width: 20vw;
+    word-wrap: break-word;
     font-family: "Poppins";
     font-weight: 500;    
 }
